manifests/workloads/vllm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vllm
  namespace: vllm
  labels:
    app.kubernetes.io/name: vllm
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - vllm.chik4ge.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vllm-api
          port: 8000
